[package]
name = "passinglink"
authors = ["Josh Gao <josh@jmgao.dev>"]
license = "GPL-3.0"

version = "0.0.0"
edition = "2018"

[dependencies]
stm32f1xx-hal = { version = "0.3", features = ["rt", "stm32f103" ] }
cortex-m = "0.6"
cortex-m-rt = { version = "0.6.6", features = ["device"] }
cortex-m-semihosting = { version = "0.3.3", features = ["inline-asm"] }
panic-semihosting = { version = "0.5", features = ["inline-asm"] }
cortex-m-rtfm = "0.4"

usb-device = { path = "vendor/usb-device" }
stm32f103xx-usb = { path = "vendor/stm32f103xx-usb" }

[patch.'https://github.com/mvirkkunen/usb-device']
usb-device = { path = "vendor/usb-device" }
